--- a/src/main/resources/assets/constructionwand/lang/en_us.json
+++ b/src/main/resources/assets/constructionwand/lang/en_us.json
@@ -5,6 +5,43 @@
   "item.constructionwand.infinity_wand": "Infinity Wand",
 
   "constructionwand.key.category": "Construction Wand",
-  "constructionwand.key.mode": "Mode",
-  "constructionwand.key.option": "Options"
+  "constructionwand.key.mode": "Wand mode",
+  "constructionwand.key.lock": "Place restriction",
+  "constructionwand.key.direction": "Place direction",
+  "constructionwand.key.fluid": "Fluid lock",
+
+  "constructionwand.tooltip.mode": "Mode: ",
+  "constructionwand.tooltip.mode.default": "Default",
+  "constructionwand.tooltip.mode.angel": "Angel",
+  "constructionwand.tooltip.lock": "Restriction: ",
+  "constructionwand.tooltip.lock.northsouth": "North-South",
+  "constructionwand.tooltip.lock.verticalnorthsouth": "North-South (+ Vertical)",
+  "constructionwand.tooltip.lock.verticaleastwest": "East-West (+ Vertical)",
+  "constructionwand.tooltip.lock.horizontal": "Horizontal",
+  "constructionwand.tooltip.lock.vertical": "Vertical",
+  "constructionwand.tooltip.lock.nolock": "None",
+  "constructionwand.tooltip.direction": "Direction: ",
+  "constructionwand.tooltip.direction.target": "Target",
+  "constructionwand.tooltip.direction.player": "Player",
+  "constructionwand.tooltip.fluid": "Fluid: ",
+  "constructionwand.tooltip.fluid.stopat": "Stop",
+  "constructionwand.tooltip.fluid.ignore": "Replace",
+
+  "constructionwand.chat.mode": "Mode: ",
+  "constructionwand.chat.mode.default": "Default - Extend your building on the side facing you",
+  "constructionwand.chat.mode.angel": "Angel - Place behind blocks and in mid air",
+  "constructionwand.chat.lock": "Restriction: ",
+  "constructionwand.chat.lock.northsouth": "North-South - Extend north and south from initial block. No building on north/south face",
+  "constructionwand.chat.lock.verticalnorthsouth": "North-South (+ Vertical) - Extend north, south, up and down from initial block. No building on north/south face",
+  "constructionwand.chat.lock.eastwest": "East-West - Extend east and west from the initial block. No building on east/west face",
+  "constructionwand.chat.lock.verticaleastwest": "East-West (+ Vertical) - Extend east, west, up and down from the original block. No building on east/west face",
+  "constructionwand.chat.lock.horizontal": "Horizontal - Extend left and right from the original block. No building on top/bottom face",
+  "constructionwand.chat.lock.vertical": "Vertical - Extend up and down from the original block. No building on top/bottom face",
+  "constructionwand.chat.lock.nolock": "None - Extend left, right, up and down from the original block",
+  "constructionwand.chat.direction": "Direction: ",
+  "constructionwand.chat.direction.target": "Target - Place blocks with same direction as target block",
+  "constructionwand.chat.direction.player": "Player - Place blocks facing the player",
+  "constructionwand.chat.fluid": "Fluid: ",
+  "constructionwand.chat.fluid.stopat": "Stop - Stopped by fluid. Does not build through fluid of any kind",
+  "constructionwand.chat.fluid.ignore": "Replace - Builds through fluid (both source blocks and flowing blocks)"
 }
