--- a/src/main/resources/assets/constructionwand/lang/en_us.json
+++ b/src/main/resources/assets/constructionwand/lang/en_us.json
@@ -5,10 +5,8 @@
   "item.constructionwand.infinity_wand": "Infinity Wand",
 
   "constructionwand.key.category": "Construction Wand",
-  "constructionwand.key.mode": "Wand mode",
-  "constructionwand.key.lock": "Place restriction",
   "constructionwand.key.direction": "Place direction",
-  "constructionwand.key.fluid": "Fluid lock",
+  "constructionwand.key.replace": "Replacement mode",
 
   "constructionwand.tooltip.blocks": "Max. %d blocks",
   "constructionwand.tooltip.shift": "Press [SHIFT]",
@@ -24,10 +22,12 @@
   "constructionwand.option.lock.horizontal.desc": "Extend §aleft/right§f from the original block. No building on top/bottom face",
   "constructionwand.option.lock.vertical": "§aVertical",
   "constructionwand.option.lock.vertical.desc": "Extend §aup/down§f from the original block. No building on top/bottom face",
-  "constructionwand.option.lock.top_bottom": "§aTop/Bottom",
-  "constructionwand.option.lock.top_bottom.desc": "Extend §atop/bottom§f from the original block. No building on side faces",
+  "constructionwand.option.lock.northsouth": "§6North/South",
+  "constructionwand.option.lock.northsouth.desc": "Extend §anorth/south§f on top of the original block. No building on side faces",
+  "constructionwand.option.lock.eastwest": "§6East/West",
+  "constructionwand.option.lock.eastwest.desc": "Extend §aeast/west§f on top of the original block. No building on side faces",
   "constructionwand.option.lock.nolock": "§cNone",
-  "constructionwand.option.lock.nolock.desc": "Extend §aleft/right§f, §aup/down§f and §atop/bottom§f from the original block",
+  "constructionwand.option.lock.nolock.desc": "Extend from any side of the original block",
 
   "constructionwand.option.direction": "Direction: ",
   "constructionwand.option.direction.target": "§6Target",
@@ -35,11 +35,11 @@
   "constructionwand.option.direction.player": "§aPlayer",
   "constructionwand.option.direction.player.desc": "Place blocks facing the player",
 
-  "constructionwand.option.fluid": "Fluid: ",
-  "constructionwand.option.fluid.stopat": "§cStop",
-  "constructionwand.option.fluid.stopat.desc": "Stopped by fluid. Does not build through fluid of any kind",
-  "constructionwand.option.fluid.ignore": "§aReplace",
-  "constructionwand.option.fluid.ignore.desc": "Builds through fluid (both source blocks and flowing blocks)",
+  "constructionwand.option.replace": "Replacement: ",
+  "constructionwand.option.replace.yes": "§aYes",
+  "constructionwand.option.replace.yes.desc": "Replace certain blocks like fluids, snow and tallgrass",
+  "constructionwand.option.replace.no": "§cNo",
+  "constructionwand.option.replace.no.desc": "Don't replace blocks",
 
   "stat.constructionwand.use_wand": "Blocks placed using Wand"
 }
