Fixed key events

--- a/src/main/resources/assets/constructionwand/lang/de_de.json
+++ b/src/main/resources/assets/constructionwand/lang/de_de.json
@@ -5,6 +5,7 @@
   "item.constructionwand.infinity_wand": "Stab der Unendlichkeit",
 
   "constructionwand.key.category": "Construction Wand",
+  "constructionwand.key.wand": "Ausrichtung (+SHIFT: Ersetzungsmodus)",
   "constructionwand.key.direction": "Ausrichtung",
   "constructionwand.key.replace": "Ersetzungsmodus",
 
