--- a/src/main/resources/assets/constructionwand/lang/en_us.json
+++ b/src/main/resources/assets/constructionwand/lang/en_us.json
@@ -41,5 +41,19 @@
   "constructionwand.option.replace.no": "§cNo",
   "constructionwand.option.replace.no.desc": "Don't replace blocks",
 
+  "constructionwand.option.match": "Matching: ",
+  "constructionwand.option.match.exact": "§aExact",
+  "constructionwand.option.match.exact.desc": "Only extend blocks that are exactly the same",
+  "constructionwand.option.match.similar": "§6Similar",
+  "constructionwand.option.match.similar.desc": "Treat similar blocks (dirt/grass types) equally",
+  "constructionwand.option.match.any": "§cAny",
+  "constructionwand.option.match.any.desc": "Extend any block",
+
+  "constructionwand.option.random": "Random: ",
+  "constructionwand.option.random.yes": "§aYes",
+  "constructionwand.option.random.yes.desc": "Place random blocks present in your hotbar",
+  "constructionwand.option.random.no": "§cNo",
+  "constructionwand.option.random.no.desc": "Don't randomize placed blocks",
+
   "stat.constructionwand.use_wand": "Blocks placed using Wand"
 }
