--- a/src/main/resources/assets/constructionwand/lang/en_us.json
+++ b/src/main/resources/assets/constructionwand/lang/en_us.json
@@ -14,14 +14,14 @@
   "constructionwand.option.mode.angel.desc": "Place behind blocks and in mid air",
 
   "constructionwand.option.lock": "Restriction: ",
-  "constructionwand.option.lock.horizontal": "§aHorizontal",
-  "constructionwand.option.lock.horizontal.desc": "Extend §aleft/right§f from the original block. No building on top/bottom face",
-  "constructionwand.option.lock.vertical": "§aVertical",
-  "constructionwand.option.lock.vertical.desc": "Extend §aup/down§f from the original block. No building on top/bottom face",
+  "constructionwand.option.lock.horizontal": "§aLeft/Right",
+  "constructionwand.option.lock.horizontal.desc": "Build a horizontal column in fromt of the original block",
+  "constructionwand.option.lock.vertical": "§aUp/Down",
+  "constructionwand.option.lock.vertical.desc": "Build a vertical column in front of the original block",
   "constructionwand.option.lock.northsouth": "§6North/South",
-  "constructionwand.option.lock.northsouth.desc": "Extend §anorth/south§f on top of the original block. No building on side faces",
+  "constructionwand.option.lock.northsouth.desc": "Build a row in N/S direction on top of the original block",
   "constructionwand.option.lock.eastwest": "§6East/West",
-  "constructionwand.option.lock.eastwest.desc": "Extend §aeast/west§f on top of the original block. No building on side faces",
+  "constructionwand.option.lock.eastwest.desc": "Build a row in E/W direction on top of the original block",
   "constructionwand.option.lock.nolock": "§cNone",
   "constructionwand.option.lock.nolock.desc": "Extend from any side of the original block",
 
