--- a/src/main/resources/assets/constructionwand/lang/en_us.json
+++ b/src/main/resources/assets/constructionwand/lang/en_us.json
@@ -15,7 +15,7 @@
 
   "constructionwand.option.lock": "Restriction: ",
   "constructionwand.option.lock.horizontal": "§aLeft/Right",
-  "constructionwand.option.lock.horizontal.desc": "Build a horizontal column in fromt of the original block",
+  "constructionwand.option.lock.horizontal.desc": "Build a horizontal column in front of the original block",
   "constructionwand.option.lock.vertical": "§aUp/Down",
   "constructionwand.option.lock.vertical.desc": "Build a vertical column in front of the original block",
   "constructionwand.option.lock.northsouth": "§6North/South",
