Completed conjured block behavior Added all wand upgrades

--- a/src/main/resources/assets/constructionwand/lang/en_us.json
+++ b/src/main/resources/assets/constructionwand/lang/en_us.json
@@ -3,25 +3,30 @@
   "item.constructionwand.iron_wand": "Iron Wand",
   "item.constructionwand.diamond_wand": "Diamond Wand",
   "item.constructionwand.infinity_wand": "Infinity Wand",
-
   "item.constructionwand.core_angel": "Angel Wand Core",
+  "item.constructionwand.core_destruction": "Destruction Wand Core",
   "item.constructionwand.reservoir_random": "Random Wand Reservoir",
-
+  "item.constructionwand.reservoir_conjuration": "Conjuration Wand Reservoir",
+  "item.constructionwand.reservoir_petrogenesis": "Petrogenesis Wand Reservoir",
+  "block.constructionwand.conjured_block": "Conjured Block",
   "constructionwand.tooltip.blocks": "Max. %d blocks",
   "constructionwand.tooltip.shift": "Press [SHIFT]",
-
   "constructionwand.option.cores": "",
   "constructionwand.option.cores.constructionwand:default": "Construction Core",
   "constructionwand.option.cores.constructionwand:default.desc": "Extend your building on the side facing you",
   "constructionwand.option.cores.constructionwand:core_angel": "§6Angel Core",
   "constructionwand.option.cores.constructionwand:core_angel.desc": "Place behind blocks and in mid air",
-
+  "constructionwand.option.cores.constructionwand:core_destruction": "§cDestruction Core",
+  "constructionwand.option.cores.constructionwand:core_destruction.desc": "Destroys blocks on the side facing you",
   "constructionwand.option.reservoirs": "",
   "constructionwand.option.reservoirs.constructionwand:default": "Inventory Reservoir",
   "constructionwand.option.reservoirs.constructionwand:default.desc": "Delivers the matching building material from your inventory. Take a block into your offhand to specify a different material.",
   "constructionwand.option.reservoirs.constructionwand:reservoir_random": "Random Reservoir",
   "constructionwand.option.reservoirs.constructionwand:reservoir_random.desc": "Takes random blocks from your hotbar",
-
+  "constructionwand.option.reservoirs.constructionwand:reservoir_conjuration": "Conjuration Reservoir",
+  "constructionwand.option.reservoirs.constructionwand:reservoir_conjuration.desc": "Places conjured blocks. These act as placeholder blocks and can be replaced by a block of choice.",
+  "constructionwand.option.reservoirs.constructionwand:reservoir_petrogenesis": "Petrogenesis Reservoir",
+  "constructionwand.option.reservoirs.constructionwand:reservoir_petrogenesis.desc": "Creates an infinite amount of cobblestone",
   "constructionwand.option.lock": "Restriction: ",
   "constructionwand.option.lock.horizontal": "§aLeft/Right",
   "constructionwand.option.lock.horizontal.desc": "Build a horizontal column in front of the original block",
