--- a/src/main/resources/assets/constructionwand/lang/en_us.json
+++ b/src/main/resources/assets/constructionwand/lang/en_us.json
@@ -7,9 +7,10 @@
   "item.constructionwand.core_destruction": "Destruction Wand Core",
   "item.constructionwand.reservoir_random": "Random Wand Reservoir",
   "item.constructionwand.reservoir_conjuration": "Conjuration Wand Reservoir",
-  "block.constructionwand.conjured_block": "Conjured Block",
+
   "constructionwand.tooltip.blocks": "Max. %d blocks",
   "constructionwand.tooltip.shift": "Press [SHIFT]",
+
   "constructionwand.option.cores": "",
   "constructionwand.option.cores.constructionwand:default": "Construction Core",
   "constructionwand.option.cores.constructionwand:default.desc": "Extend your building on the side facing you",
@@ -17,13 +18,7 @@
   "constructionwand.option.cores.constructionwand:core_angel.desc": "Place behind blocks and in mid air",
   "constructionwand.option.cores.constructionwand:core_destruction": "§cDestruction Core",
   "constructionwand.option.cores.constructionwand:core_destruction.desc": "Destroys blocks on the side facing you",
-  "constructionwand.option.reservoirs": "",
-  "constructionwand.option.reservoirs.constructionwand:default": "Inventory Reservoir",
-  "constructionwand.option.reservoirs.constructionwand:default.desc": "Delivers the matching building material from your inventory. Take a block into your offhand to specify a different material.",
-  "constructionwand.option.reservoirs.constructionwand:reservoir_random": "Random Reservoir",
-  "constructionwand.option.reservoirs.constructionwand:reservoir_random.desc": "Takes random blocks from your hotbar",
-  "constructionwand.option.reservoirs.constructionwand:reservoir_conjuration": "Conjuration Reservoir",
-  "constructionwand.option.reservoirs.constructionwand:reservoir_conjuration.desc": "Places conjured blocks. These act as placeholder blocks and can be replaced by a block of choice.",
+
   "constructionwand.option.lock": "Restriction: ",
   "constructionwand.option.lock.horizontal": "§aLeft/Right",
   "constructionwand.option.lock.horizontal.desc": "Build a horizontal column in front of the original block",
@@ -55,6 +50,12 @@
   "constructionwand.option.match.similar.desc": "Treat similar blocks (dirt/grass types) equally",
   "constructionwand.option.match.any": "§cAny",
   "constructionwand.option.match.any.desc": "Extend any block",
+
+  "constructionwand.option.random": "Random: ",
+  "constructionwand.option.random.yes": "§aYes",
+  "constructionwand.option.random.yes.desc": "Place random blocks present in your hotbar",
+  "constructionwand.option.random.no": "§cNo",
+  "constructionwand.option.random.no.desc": "Don't randomize placed blocks",
 
   "stat.constructionwand.use_wand": "Blocks placed using Wand"
 }
