Added crafting recipes for wand cores Wand core list in tooltip Tooltips for wand cores

--- a/src/main/resources/assets/constructionwand/lang/de_de.json
+++ b/src/main/resources/assets/constructionwand/lang/de_de.json
@@ -8,6 +8,8 @@
 
   "constructionwand.tooltip.blocks": "Max. %d Blöcke",
   "constructionwand.tooltip.shift": "Drücke [SHIFT]",
+  "constructionwand.tooltip.cores": "Kristalle im Stab:",
+  "constructionwand.tooltip.core_tip": "Kombiniere den Kristall mit deinem Stab im Craftingfeld",
 
   "constructionwand.option.cores": "",
   "constructionwand.option.cores.constructionwand:default": "Kristall der Konstruktion",
