update ja_jp translation.

--- a/src/main/resources/assets/constructionwand/lang/ja_jp.json
+++ b/src/main/resources/assets/constructionwand/lang/ja_jp.json
@@ -1,7 +1,7 @@
 {
   "item.constructionwand.stone_wand": "石の杖",
   "item.constructionwand.iron_wand": "鉄の杖",
-  "item.constructionwand.diamond_wand": "ダイアモンドの杖",
+  "item.constructionwand.diamond_wand": "ダイヤモンドの杖",
   "item.constructionwand.infinity_wand": "無限の杖",
   "item.constructionwand.core_angel": "天使の杖のコア",
   "item.constructionwand.core_destruction": "破壊の杖のコア",
